csv_2_map/out/production/csv_2_map/Csv.g4
grammar Csv;

file : hdr row+ ;
hdr : row ;

row : field (',' field)* '\r'? '\n' ;

field: TEXT     # text
    | STRING    # string
    |           # empty
;

TEXT: ~[,\n\r"]+ ;
STRING: '"' ('""' | ~'"')* '"' ;
